# isafety

./: Pipfile  README.md  pyproject.toml  scan_backup.py  test_cms_decode.py
backup/: backup_scanner.py  libibackup.py
scanners/: __init__.py  carrier_settings.py  managed_preferences.py
src/: main.py
src/isafety/: __init__.py
src/isafety/backup/: __init__.py
src/isafety/collectors/: __init__.py  icloud.py  ioreg.py  remotectl.py  syscfg.py
src/isafety/commands/: scan_backup.py
src/isafety/scanners/: __init__.py  bluetooth.py  configuration_profile.py  disabled_services.py  pairing_records.py  provisioning_profile.py  watch_backups.py
syscfg/: __init__.py
